# cosmic-ext-radio

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
resources/: io.github.xinia.RadioWidget.desktop
src/: config.rs  controller.rs  main.rs  models.rs  mpv.rs  radio_browser.rs
src/ui/: applet.rs  mod.rs
